--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,10 +20,10 @@
 </head>
 <body>
 <section class="page-header">
-<h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+<h1 class="project-name">MadelineProto</h1>
 <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 {% if site.github.is_project_page %}
-<a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+<a href="https://github.com/danog/MadelineProto" class="btn">View on GitHub</a>
 {% endif %}
 {% if site.show_downloads %}
 <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
