--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,6 @@
 <link rel="mask-icon" href="{{ '/favicons/safari-pinned-tab.svg?v=' | append: site.github.build_revision | relative_url }}" color="#5bbad5">
 <link rel="shortcut icon" href="{{ '/favicons/favicon.ico?v=' | append: site.github.build_revision | relative_url }}">
 <meta name="msapplication-config" content="{{ '/favicons/browserconfig.xml?v=' | append: site.github.build_revision | relative_url }}">
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'  media='print'>
 </head>
 <body>
 <section class="page-header">
@@ -44,5 +43,7 @@
 {% if site.google_analytics %}
 <script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));try {var pageTracker = _gat._getTracker("{{ site.google_analytics }}");pageTracker._trackPageview();} catch(err) {}</script>
 {% endif %}
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+
 </body>
 </html>
