--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -32,8 +32,7 @@
 </section>
 
 <section class="main-content">
-{{ content }}
-
+{% include anchor_headings.html html=content anchorBody="#" %}
 
     <amp-user-notification id="my-notification" layout="nodisplay">
         <div>
