--- a/docs/assets/css/just-the-docs-default.scss
+++ b/docs/assets/css/just-the-docs-default.scss
@@ -1,8 +1,1 @@
----
-layout: empty
----
-$logo: "https://docs.madelineproto.xyz/logo.png";
-@import "./support/support";
-@import "./color_schemes/dark";
-@import "./modules";
-@import "./custom/custom";
+just-the-docs-light.scss
