--- a/docs/_sass/search.scss
+++ b/docs/_sass/search.scss
@@ -49,6 +49,7 @@
   padding-left: #{$gutter-spacing-sm + $sp-5};
   font-size: 16px;
   background-color: $search-background-color;
+  color: $body-text-color;
   border-top: 0;
   border-right: 0;
   border-bottom: 0;
