Stargazers, style fixes

--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,4 +1,6 @@
 <ul class="nav-list">
+  <li class="nav-list-item"><a href="https://github.com/danog/MadelineProto/" class="nav-list-link nav-list-github" target="_blank">⭐️ on GitHub!</a></li>
+
   {%- assign titled_pages = include.pages
         | where_exp:"item", "item.title != nil" -%}
 
