--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -43,6 +43,7 @@ layout: table_wrappers
   <div class="side-bar">
     <div class="site-header">
       <a href="{{ '/' | absolute_url }}" class="site-title lh-tight">{% include title.html %}</a>
+      <a id="star-button" href="https://github.com/danog/MadelineProto" class="btn" target="_blank">⭐️ 1.8k</a>
       <a href="#" class="btn theme-light-button">🌞</a>
       <a href="#" class="btn theme-dark-button">🌚</a>
       <a href="#" id="menu-button" class="site-button">
