--- a/docs/_sass/buttons.scss
+++ b/docs/_sass/buttons.scss
@@ -11,6 +11,7 @@
   padding-bottom: 0.3em;
   padding-left: 1em;
   margin: 0;
+  margin-right: 0.15em;
   font-family: inherit;
   font-size: inherit;
   font-weight: 500;
