--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -10,8 +10,8 @@
     {% endif %}
   {% endunless %}
 
-  <link rel="preload" href="{{ '/assets/css/just-the-docs-dark.css' | relative_url }}" as="style">
-  <link rel="stylesheet" href="{{ '/assets/css/just-the-docs-light.css' | relative_url }}">
+  <link rel="preload" href="{{ '/assets/css/just-the-docs-dark.css' | relative_url }}?v=2" as="style">
+  <link rel="stylesheet" href="{{ '/assets/css/just-the-docs-light.css' | relative_url }}?v=2">
 
   {% if site.ga_tracking != nil %}
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.ga_tracking }}"></script>
@@ -28,7 +28,7 @@
   {% if site.search_enabled != false %}
     <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}"></script>
   {% endif %}
-  <script type="text/javascript" src="{{ '/assets/js/just-the-docs.js' | relative_url }}"></script>
+  <script type="text/javascript" src="{{ '/assets/js/just-the-docs.js' | relative_url }}?v=2"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="OIo7XVmU3hJT1uHL82H6-COTtQqeefBXIpZDznJPkOg" />
