--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -26,7 +26,7 @@
   {% endif %}
 
   {% if site.search_enabled != false %}
-    <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}"></script>
+  <script src="https://unpkg.com/lunr/lunr.js"></script>
   {% endif %}
   <script type="text/javascript" src="{{ '/assets/js/just-the-docs.js' | relative_url }}?v=2"></script>
 
