--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -69,7 +69,7 @@ layout: table_wrappers
       {% endif %}
     </nav>
     <footer class="site-footer">
-      This site uses <a href="https://github.com/pmarsceill/just-the-docs" target="_blank">Just the Docs</a>, a modified documentation theme for [Gojekyll](https://github.com/osteele/gojekyll).
+      This site uses <a href="https://github.com/pmarsceill/just-the-docs" target="_blank">Just the Docs</a>, a modified documentation theme for <a href="https://github.com/osteele/gojekyll" target="_blank">Gojekyll</a>.
     </footer>
   </div>
   <div class="main" id="top">
