--- a/docs/_sass/support/_functions.scss
+++ b/docs/_sass/support/_functions.scss
@@ -1,4 +1,4 @@
-@function rem($size, $unit: "") {
+@function remCustom($size, $unit: "") {
   $remSize: $size / $root-font-size;
 
   @if ($unit == false) {
