--- a/docs/_sass/support/mixins/_layout.scss
+++ b/docs/_sass/support/mixins/_layout.scss
@@ -12,7 +12,7 @@
   // If the key exists in the map
   @if $value != null {
     // Prints a media query based on the value
-    @media (min-width: rem($value)) {
+    @media (min-width: remCustom($value)) {
       @content;
     }
   } @else {
